# NTF

./: CMakeLists.txt  FindFriendApp1  LICENSE  README.md  SECURITY.md  test_p2p_nodes.sh  开发文档.md  测试报告.md  用户手册.md
FindFriend/: CMakeLists.txt  README.md
FindFriend/build_test/: ff_cli.c
FindFriend/common_core/interface/: ff_location_interface.h  ff_message_interface.h  ff_p2p_interface.h
FindFriend/common_core/p2p/: connection.c  ff_p2p_friend.h  ff_p2p_hole_punch.h  ff_p2p_location.h  ff_p2p_stun.h  ff_p2p_turn.h  friend.c  hole_punch.c  location.c  message_routing.c  nat_traversal.c  node_discovery.c  stun_client.c  turn_client.c
FindFriend/core/: CMakeLists.txt  core_init.c
FindFriend/core/business/: game_manager.c  location_service.c  message_manager.c  social_manager.c  user_manager.c
FindFriend/core/data/: cache_manager.c  data_store.c
FindFriend/core/interface/: ff_core_interface.h  ff_game_interface.h  ff_p2p_interface.h  ff_security_interface.h  ff_user_interface.h
FindFriend/core/p2p/: connection.c  message_routing.c  nat_traversal.c  node_discovery.c  p2p.c
FindFriend/core/utils/: config_manager.c  log_manager.c  memory_pool.c  safe_string.c
FindFriend/docs/: ARCHITECTURE.md  BSD_GUIDE.md  BSD_PLATFORM.md  BUILD.md  FINISHED_GUIDE.md  P2P_COMPLETE_GUIDE.md  P2P_DESIGN.md  P2P_USAGE.md  README.md  README_CORE_INTERFACE.md  SECURITY.md  SECURITY_MODULE.md
FindFriend/platform/bsd/: CMakeLists.txt
FindFriend/platform/bsd/freebsd/: main.c  network.c  platform_specific.c  platform_specific.h  security.c  system.c
FindFriend/platform/bsd/netbsd/: main.c  network.c  platform_specific.c  platform_specific.h  security.c  system.c
FindFriend/platform/bsd/openbsd/: main.c  network.c  platform_specific.c  platform_specific.h  security.c  system.c
FindFriend/platform/linux/: CMakeLists.txt  main.c  platform_specific.c
FindFriend/security_rust/: CMakeLists.txt  Cargo.toml
FindFriend/security_rust/ffi/: ff_security_ffi.h  ff_security_rust.h
FindFriend/security_rust/src/: anti_crawler.rs  anti_dos.rs  anti_fake_gps.rs  device.rs  input.rs  integrity.rs  lib.rs  location.rs  memory.rs  mitm.rs  root_detect.rs
FindFriend/tools/cli/: CMakeLists.txt  cli_main.c  commands.c  display.c  input_handler.c  p2p_test.c
FindFriend/ui/: CMakeLists.txt
FindFriendApp/app/: CMakeLists.txt
FindFriendApp_PC_Windows/: CMakeLists.txt
FindFriendApp_PC_Windows/Core/: BasePage.cs  MainWindow.cs
FindFriendApp_PC_Windows/Pages/: ChatPage.cs  MinePage.cs
FindFriendApp_PC_Windows/src/: main.cpp
FindFriendApp_PC_Windows/src/ui/: CustomerManagement.cpp  CustomerManagement.h  MainWindow.cpp  MainWindow.h  MerchantDashboard.h  SettingsWidget.cpp
FindFriendApp_v1.0/RedHat/: CMakeLists.txt  map.html  resources.qrc  style.qss
FindFriendApp_v1.0/RedHat/src/: main.cpp
FindFriendApp_v1.0/RedHat/src/models/: User.cpp
FindFriendApp_v1.0/RedHat/src/network/: NetworkManager.cpp
FindFriendApp_v1.0/RedHat/src/ui/: ExhibitionWidget.cpp  GalleryWidget.cpp  GalleryWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.h  MapWidget.cpp  MapWidget.h  TicketWidget.cpp  TransactionWidget.cpp  TransactionWidget.h
FindFriendApp_v1.0/Windows/: CMakeLists.txt  style.qss
FindFriendApp_v1.0/Windows/src/ui/: LoginDialog.cpp  LoginDialog.h  MerchantDashboard.cpp  OrderManagement.cpp  OrderManagement.h  ProductManagement.cpp  ProductManagement.h
common_core/: CMakeLists.txt  core_interface.c  ff_rust_integration_test.c  ff_safe_utils.c  ff_safe_utils.h  find_friend_core.c  find_friend_core.h
common_core/auth/: auth.c  auth.h
common_core/bridge/: bridge.c  bridge.h
common_core/business/: exhibition_manager.c  exhibition_manager.h  location_manager.c  message_manager.c  multimedia_transfer_manager.c  multimedia_transfer_manager.h  photo_transfer_manager.c  social_manager.c  ticket_manager.c  ticket_manager.h  transaction_manager.c  transaction_manager.h  user_manager.c
common_core/game/: game_manager.h
common_core/model/: database.c  database.h  exhibition.h  user.c
common_core/network/: network.c  network.h
common_core/security/: device_fingerprint.h  dos_protect.c  dos_protect_enhanced.c  inject_filter.c  integrity_check.c  integrity_check.h  linux_desktop_compat.c  linux_desktop_compat.h  memory_encrypt.c  root_detect.c  security.h  xml_protect.h
common_core/security/boot_check/: boot_check.c
common_core/utils/: safe_memory.c  secure_log.h
common_core/version/: version.h
rust_modules/rust_crypto/: Cargo.toml
rust_modules/rust_crypto/src/: lib.rs
rust_modules/rust_network/: Cargo.toml
rust_modules/rust_network/src/: lib.rs
rust_modules/rust_security/: Cargo.toml
rust_modules/rust_security/src/: lib.rs
旧/4.25/: .editorconfig  CMakeLists.txt  CODEOWNERS
旧/4.25/common_core/: core_cli.c  core_interface.h
旧/4.25/common_core/business/: exhibition_manager.c  location_manager.c  message_manager.h  photo_transfer_manager.h  ticket_manager.c
旧/4.25/common_core/data/: data_manager.c  data_manager.h
旧/4.25/common_core/model/: message.h
旧/4.25/common_core/network/: p2p_network.c  p2p_network.h
旧/4.25/common_core/security/: code_obfuscation.h  device_fingerprint.c  dos_protect_enhanced.h  integrity_check.c  linux_desktop_compat.c  security_module.c  security_module.h  ultimate_protection.h  xml_protect.c
旧/4.25/common_core/util/: utils.c  utils.h
旧/4.25/common_core/utils/: safe_memory.h
旧/4.25/common_ui/: common_ui.c
旧/4.25/common_ui/main/: client_main_window.h  main_window.h  management_main_window.c  management_main_window.h  merchant_main_window.c
旧/4.25/common_ui/qt/: theme_manager.h
旧/4.25/docs/: BSD_PLATFORM.md  CHANGELOG.md  P2P_COMPLETE_GUIDE.md  PROJECT_OPTIMIZATION_SUMMARY.md
旧/4.25/scripts/: build_bsd.sh  run_app.sh
旧/4.3/platform_linux_debian/: .findfriend_config  CMakeLists.txt  main.c
旧/4.3/platform_windows/: CMakeLists.txt
旧/common_ui/: CMakeLists.txt
旧/common_ui/friend_list/: friend_list.c
旧/common_ui/login/: login_window.c
旧/platform_android/: CMakeLists.txt
旧/platform_linux_arch/: CMakeLists.txt
(+233 files in other folders)
