[package]
name = "rust_crypto"
version = "0.1.0"
edition = "2021"
authors = ["FindFriend Team"]
description = "Cryptographic security for FindFriend"

[lib]
name = "rust_crypto"
crate-type = ["staticlib", "cdylib"]

[dependencies]
aes = "0.8"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"
aes-gcm-siv = "0.10"
libc = "0.2"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
x25519-dalek = "2.0"
hkdf = "0.12"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[build-dependencies]
cbindgen = "0.26"
