[package]
name = "rust_network"
version = "0.1.0"
edition = "2021"
authors = ["FindFriend Team"]
description = "Secure network communication for FindFriend"

[lib]
name = "rust_network"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3"
tokio-util = "0.7"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.26"
