[package]
name = "rust_security"
version = "0.1.0"
edition = "2021"
authors = ["FindFriend Team"]
description = "Security validation and input sanitization for FindFriend"

[lib]
name = "rust_security"
crate-type = ["staticlib", "cdylib"]

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
thiserror = "1.0"
libc = "0.2"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
cbindgen = "0.26"
